# intuit

./: .gitignore  MULTI_ROOT_WORKSPACE_README.md  architecture-diagram.html  architecture-diagram.md  architecture-diagram_v1.html  architecture-diagram_v2.html  architecture-diagram_v2.md  build.gradle  create-projects.bash  notes.md  notes.txt  readme.md  requests.http  settings.gradle  turbotax-microservices.code-workspace
diagrams/: architecture_diagram.drawio
turbotax-agent-service/: .gitignore  .python_deps_installed  README.md  activate.sh  build.gradle  ollama.py  ollama_client.py  openai_client.py  pyproject.toml  requests.http  requirements.txt
turbotax-agent-service/config/: development.env  production.env  test.env
turbotax-agent-service/src/main/python/turbotax/: __init__.py
turbotax-agent-service/src/main/python/turbotax/agent/: __init__.py  assistants.py  base_assistant.py  config.py  constants.py  dependencies.py  exceptions.py  main.py  models.py  ollama_assistant.py  openai_assistant.py  prompts.py
turbotax-agent-service/src/main/python/turbotax/agent/routers/: assist.py  health.py
turbotax-agent-service/src/main/python/turbotax/agent/services/: __init__.py  streaming_service.py
turbotax-agent-service/src/main/python/turbotax/agent_service/: __init__.py  config.py  constants.py  main.py
turbotax-agent-service/src/main/python/turbotax/agent_service/core/: constants.py  prompts.py
turbotax-agent-service/src/main/python/turbotax/agent_service/core/assistants/: __init__.py  base_assistant.py  ollama_assistant.py  openai_assistant.py
turbotax-agent-service/src/main/python/turbotax/agent_service/infrastructure/: cache.py  dependencies.py
turbotax-agent-service/src/main/python/turbotax/agent_service/interfaces/: __init__.py  refund_service_interface.py  tax_assistant_interface.py
turbotax-agent-service/src/main/python/turbotax/agent_service/services/: query_processor.py  refund_service.py  streaming_service.py
turbotax-agent-service/src/test/python/turbotax/agent/: test_main.py
turbotax-agent-service/tests/: test_assistants.py
turbotax-agent-ui/: .gitignore  .python_deps_installed  README.md  build.gradle  pyproject.toml  requests.http  requirements.txt
turbotax-agent-ui/src/main/python/turbotax/agent_ui/: config.py  constants.py  dependencies.py  exceptions.py  main.py  models.py  ollama_assistant.py  openai_assistant.py  prompts.py  web_ui.py
turbotax-agent-ui/src/main/python/turbotax/agent_ui/routers/: assist.py  health.py
turbotax-agent-ui/src/main/python/turbotax/agent_ui/services/: query_processor.py  refund_service.py
turbotax-agent-ui/src/main/python/turbotax/agent_ui/templates/: index.html
turbotax-agent-ui/src/test/python/turbotax/agent_ui/: __init__.py  conftest.py  test_main.py  test_web_ui.py
(+471 files in other folders)
