[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turbotax-agent-service"
version = "1.0.0"
description = "Core AI service logic for TurboTax Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.0.13",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
turbotax-agent-service = "turbotax.agent_service.main:main"